src/objects/Dashboard_Selector__c.object
<CustomObject>
    <description>Controls what selectors are to go on a dashboard selector</description>
    <fields>
        <fullName>Dashboard_Section__c</fullName>
        <label>Dashboard Section</label>
        <referenceTo>Dashboard_Section__c</referenceTo>
        <relationshipLabel>Dashboard Selectors</relationshipLabel>
        <relationshipName>Dashboard_Selectors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Period__c</fullName>
        <description>The time period that each metric data lasts for</description>
        <inlineHelpText>Select how often you want the metrics to change</inlineHelpText>
        <label>Date Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_BVAT_CIW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays a dropdown box to select the CIW for the BVAT Dashboard</description>
        <inlineHelpText>Displays a dropdown box to select the CIW for the BVAT Dashboard</inlineHelpText>
        <label>Show BVAT CIW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Brac_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Brac Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Brac_PA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Brac PA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_CKW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the CKW selector</description>
        <inlineHelpText>Check to include the CKW selector in the dashboard selector</inlineHelpText>
        <label>Show CKW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the country selector</description>
        <inlineHelpText>Check to display the country selector</inlineHelpText>
        <label>Show Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Data_Validator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the data validator selector</description>
        <inlineHelpText>Check to include the Data Validator selector in the dashboard selector</inlineHelpText>
        <label>Show Data Validator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the date selectors</description>
        <inlineHelpText>Check to show the date range selectors</inlineHelpText>
        <label>Show Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_District__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to include the district selector.</description>
        <inlineHelpText>Show the district selector</inlineHelpText>
        <label>Show District</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Farmer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the farmer selector</description>
        <inlineHelpText>Check to include the farmer selector in the dashboard selector</inlineHelpText>
        <label>Show Farmer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Field_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the field officer selector</description>
        <inlineHelpText>Check to include the field officer selector in the dashboard selector</inlineHelpText>
        <label>Show Field Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Kenyan_County__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays Kenyan Counties used for the BVAT Dashboard</description>
        <inlineHelpText>Displays Kenyan Counties used for the BVAT Dashboard</inlineHelpText>
        <label>Show Kenyan County</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_MTN_Chan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the MTN Channels selector</description>
        <inlineHelpText>Check to include the MTN Channels selector</inlineHelpText>
        <label>Show MTN Chan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Metric_Date_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the metric date selector</description>
        <inlineHelpText>Check to show the metric date selector. Only check if not showing the normal date selector</inlineHelpText>
        <label>Show Metric Date Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Opportunity_Farmer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the opportunity farmer selector</description>
        <inlineHelpText>Check to include the opportunity farmer selector in the dashboard selector</inlineHelpText>
        <label>Show Opportunity Farmer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to show the person selector</description>
        <inlineHelpText>Check to show the person selector</inlineHelpText>
        <label>Show Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the region selector</description>
        <inlineHelpText>Check to include the region selector</inlineHelpText>
        <label>Show Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Subcounty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the subcounty selector</description>
        <inlineHelpText>Check to show the subcounty selector</inlineHelpText>
        <label>Show Subcounty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Submit_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the submit button on the selector. Not always needed if the selector is embedded on none dashboard page</description>
        <inlineHelpText>Uncheck to hide the submit button on the selector</inlineHelpText>
        <label>Show Submit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date that the selector should start from. Will not allow any dates to be input earlier that this</description>
        <inlineHelpText>Choose the date that is the earliest you wish to see data from</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Dashboard Selector</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dashboard_Section__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DSC{0000000000}</displayFormat>
        <label>Dashboard Selector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Selectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>